<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout" />

    <EditText
        android:id="@+id/edtInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salvarArquivo"
        android:text="@string/salvar_no_arquivo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lerArquivo"
        android:text="@string/ler_arquivo" />

</LinearLayout>



